Included fixes and best practices
Removed:
- #Wrapper-element
- 100vw property as its useless and leads to unwanted scrollbars on some devices/sizes
- removed media query
- font-size: 100%; as it was not necessary

Changed:
- Moved footer-element out of the main-element
- using now min-height: 100vh; instead of height: 100vh; as it would lead to unwanted behaviour if contents ever grew past the viewports size
- replaced % values in margin and padding with rem values
- optimized alt text for image of qr code
- replaced media query with max-width: 20rem; to keep the main-element a consistent 320px width

--- a/style.css
+++ b/style.css
@@ -10,31 +10,28 @@ html{
 	background: hsl(212, 45%, 89%);
 
 	font-family: Outfit, sans-serif;
-    font-size: 100%;
 }
 
 body{
-	margin: 0 auto;
-}
-
-#wrapper{
-	display: flex;
-	justify-content: center;
-
-	width: 100vw;
-	height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 main{
 	align-self: center;
-	padding: 2%;
+	padding: 2rem;
 	border-radius: 24px;
+  max-width: 20rem;
+  height: auto;
 
 	background: #fff;
 	box-shadow: #cfcfcf 0 6px 8px;
 	text-align: center;
 	color: hsl(220, 15%, 55%);
-    margin: 2%;
+  margin: 2rem;
 }
 
 h1{
@@ -49,11 +46,4 @@ main p{
 	width: 100%;
 
 	border-radius: 12px;
-}
-
-@media screen and (min-width: 1440px){
-	main{
-		width: 25%;
-		height: auto;
-	}
 }
